# voice-agent

./: README.md  pyproject.toml
src/voice_agent/: api.py  call_joiners.py  cli.py  conversation.py  models.py  prompt_builder.py  voice_io.py
tests/: test_conversation.py  test_prompt_builder.py
